# OmniLog

./: README.md  create_user.sh  init.sh  package-lock.json  package.json  teardown.sh
.github/workflows/: app-cd.yml  app-ci.yml  cd.yml  sdk-python-ci.yml
docs/: aws_setup.md  backwards_compatibility.md  create_user.md  e2e_test.md  prisma_migrations.md  user_types.md
example/: .gitignore  README.md  main.listen.py  main.py  main.send.py  requirements.txt
example/llm/: get_openai_response.py
front/: .env-template  .eslintrc.json  .gitignore  README.md  init.sh  jest.config.js  next.config.js  package-lock.json  package.json  sst.config.ts  tailwind.config.ts  tsconfig.json
front/.sst/: stage
front/prisma/: schema.prisma  seed.ts
front/scripts/: check_var.sh  handle_errors.sh  source_if_file_exists.sh  yarn_deploy.sh  yarn_dev.sh  yarn_dev_sst.sh  yarn_teardown.sh
front/src/app/: EmptyLogs.tsx  Header.tsx  LogsTable.tsx  error.tsx  layout.tsx  loading.tsx  page.tsx
front/src/app/__tests__/: page.test.tsx
front/src/data/: LogsData.ts
front/src/hooks/: useNavigation.ts
front/src/services/: LogsData.ts
front/src/style/: globals.css
front/src/types/: filter.ts  logDisplayOptions.ts  prismaQueries.ts  safeCast.ts  sort.ts
images/: connection_details.avif
prisma/: schema.prisma
prisma/migrations/20230920091934_init/: migration.sql
prisma/migrations/20230920092433_add_cost_column/: migration.sql
prisma/migrations/20230920105113_tables_to_camel_case/: migration.sql
prisma/migrations/20230920105735_tables_to_camel_case/: migration.sql
prisma/migrations/20231005091618_added_tags/: migration.sql
scripts/: configure_env_files.sh  create_env_file.sh
sdk-python/: .flake8  .gitignore  .pylintrc  README.md  local_ci.sh  main.py  pyproject.toml  schema.sql
sdk-python/database/: connect.py  write_data.py  write_schema.py
sdk-python/models/: get_llm_response.py
sdk-python/omnilog/: input_validation.py  send_to_db.py  startListener.py  start_listener.py
sdk-python/omnilogger/: __init__.py  calculator.py  database.py  errors.py  get_pricing.py  input_validation.py  logger.py  openai_listener.py
sdk-python/omnilogger/data/: pricing.json
sdk-python/omnilogger/helpers/: logger.py
sdk-python/omnilogger/pricing/: pricing_class.py  storage_manager.py  typedDicts.py
sdk-python/prisma/: dev.db  example.py  schema.prisma  send_data.py
sdk-python/src/: test.py
sdk-python/src/omnilog/: connect_to_db.py  send_to_db.py
sdk-python/test/: calculator_test.py  check_calc_keys_test.py  check_calc_prices_test.py  check_log_test.py  check_url_test.py  get_pricing_test.py  load_pricing_test.py  openai_filter_test.py  playground.py
sdk-python/test/openai/: format_finder.py  validate_format.py
sdk-python/test/openai_api/: chatcompletion_ref.json  format_finder.py  reference_format.json  update_format.py  validate_format.py
(+102 files in other folders)
