[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "omnilog"
version = "0.0.1"
authors = [
    "Callum Hemsley <callumh@theodo.co.uk>",
    "Justin Kek <justink@theodo.co.uk>",
    "François Lorne <francoisl@theodo.co.uk>",
]
description = "logger for LLM conversations"
readme = "README.md"
packages = [{include = "omnilog"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.7"
psycopg2-binary = "^2.9.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[project.urls]
"Homepage" = "https://github.com/Theodo-UK/OmniLog"
"Bug Tracker" = "https://github.com/Theodo-UK/OmniLog/issues"