[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "omnilogger"
version = "0.0.4"
authors = [
    "Callum Hemsley <callumh@theodo.co.uk>",
    "Justin Kek <justink@theodo.co.uk>",
    "François Lorne <francoisl@theodo.co.uk>",
]
description = "logger for LLM conversations"
readme = "README.md"
packages = [{include = "omnilogger"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8.1"
psycopg2-binary = "^2.9.7"
prisma = "^0.9.1"
openai = "^0.27.8"
platformdirs = "^3.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
python-dotenv = "^1.0.0"
flake8 = "^6.1.0"
black = "^23.7.0"
isort = "^5.12.0"
pylint = "^2.17.5"
pyright = "^1.1.324"

[project.urls]
"Homepage" = "https://github.com/Theodo-UK/OmniLog"
"Bug Tracker" = "https://github.com/Theodo-UK/OmniLog/issues"

[tool.black]
preview = true

[tool.isort]
profile = "black"

[tool.pyright]
include = [
    "**/*.py",
]

typeCheckingMode = "strict"